# hca-ingest-migration

./: Dockerfile  README.md  docker-compose.yaml
.github/: secret_scanning.yml
.github/Dev/: build_and_publish_main.yaml
.github/Stash/: build_and_publish_main.yaml  generate-requirements-file.yaml  validate_pull_request_main.yaml  validate_python.yaml
.github/linters/: .pylintrc
.github/workflows/: build_and_publish_dev.yaml  build_and_publish_main.yaml  generate-requirements-file.yaml  trivy.yaml  validate_pull_request_main.yaml  validate_python.yaml
ops/helmfiles/dagster/: 1.0.0_helmfile.yaml  apply.sh  helmfile.yaml
orchestration/: Dockerfile  pyproject.toml  requirements.txt
orchestration/hca_manage/: manifest.py  verify_subgraphs.py
orchestration/hca_orchestration/config/dcp_release/: dcp_release.py
orchestration/hca_orchestration/config/dev_refresh/: dev_refresh.py
orchestration/hca_orchestration/config/prod_migration/: prod_migration.py
orchestration/hca_orchestration/contrib/: bigquery.py  dagster.py
orchestration/hca_orchestration/pipelines/: validate_ingress.py
orchestration/hca_orchestration/repositories/: local_repository.py
orchestration/hca_orchestration/resources/: utils.py
orchestration/hca_orchestration/solids/: create_snapshot.py  validate_dataset.py
orchestration/hca_orchestration/solids/load_hca/: load_table.py  stage_data.py
orchestration/hca_orchestration/solids/load_hca/data_files/: load_data_metadata_files.py
orchestration/hca_orchestration/solids/load_hca/non_file_metadata/: load_non_file_metadata.py
orchestration/hca_orchestration/tests/e2e/: test_load_hca.py  test_load_null_file_refs.py  test_updated_staging_area.py
orchestration/hca_orchestration/tests/pipelines/: test_pipelines.py
orchestration/hca_orchestration/tests/resources/: test_data_repo.py
orchestration/hca_orchestration/tests/solids/: test_create_snapshot.py  test_data_repo.py
orchestration/hca_orchestration/tests/solids/load_hca/: test_ingest_metadata_type.py  test_load_table.py  test_poll_ingest_job.py  test_stage_data.py
orchestration/hca_orchestration/tests/solids/load_hca/data_files/: test_load_data_files.py  test_load_data_metadata_files.py
orchestration/hca_orchestration/tests/solids/load_hca/non_file_metadata/: test_load_non_file_metadata.py
project/: plugins.sbt
