[tool.poetry]
name = "hca_orchestration"
version = "0.2.0"
description = "HCA ingest orchestration - a collection of scripts to manage HCA ingest"
authors = ["Barbara Hill <bhill@broadinstitute.org>"]
# update the repository when we move the official repo
# repository = ""

[tool.poetry.dependencies]
# to prevent unininteded upgrades we need to provide upperbound versions for the dependencies. For example ~3.4 instead of ^3.4
# updated to 3.12 when we upgrade to Dagster latest
python = "~3.9"
argo-workflows = "^5.0.0"
broad-dagster-utils = "0.7.0a2"
cached-property = "^1.5.2"
cffi = "1.16.0"
# TODO: we'll probably want to use just the dagster version here and not the API versions as well
# https://github.com/dagster-io/dagster/blob/master/MIGRATION.md#migrating-to-10
dagster = "0.13.0"
dagster-gcp = "0.13.0"
dagster-k8s = "0.13.0"
dagster-postgres = "0.13.0"
dagster-slack = "0.13.0"
data-repo-client = "^1.134.0"
google-cloud-bigquery = "^3.27.0"
google-cloud-storage = "^1.3.5"
graphql-ws = "<0.4.0"
grpcio = "1.53.0"
hca-import-validation = "^0.0.17"
mako = "1.2.2"
markupsafe = "2.0.1"
oauthlib = "3.2.2"
pendulum = "2.1.2"
protobuf = "3.20.2"
psycopg2-binary = "2.9.3"
python-dateutil = "^2.8.1"
pyyaml = "^6.0.2"
rfc3339-validator = "^0.1.4"
sentry-sdk = "^1.39.2"
typing-extensions = "^3.7.4"
# werkzeug = "2.2.3"
# will have to update dagit which means updating broad-dagster-utils - FE-36
aiohttp = "3.9.4"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.5.5"
dagit = "0.13.0"
flake8 = "^3.8.4"
mypy = "^0.812"
pdbpp = "^0.10.2"
pre-commit = "^2.11.0"
pytest = "^7.2.0"
pytest-dotenv = "^0.5.2"
isort = "^5.10.1"

[tool.poetry.scripts]
check = "hca_manage.check:run"
dataset = "hca_manage.dataset:run"
snapshot = "hca_manage.snapshot:run"
soft_delete = "hca_manage.soft_delete:run"
job = "hca_manage.job:fetch_job_info"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
aggressive = 1
exclude = ".pytest_cache,__pycache__"
max_line_length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
