[tool.poetry]
name = "hca_orchestration"
# TODO set this to 2 when upgraded to Dagster 1.0+ then go to minor revisions
version = "0.4.0"
description = "HCA ingest orchestration - a collection of scripts to manage HCA ingest"
authors = ["Barbara Hill <bhill@broadinstitute.org>"]
# update the repository when we move the official repo
# repository = ""

[tool.poetry.dependencies]
# updated to 3.12 when we upgrade to Dagster latest
python = "~3.10"
argo-workflows = "^5.0.0"
broad-dagster-utils = "2.0.0a6"
cached-property = "^1.5.2"
cffi = "1.16.0"
# https://github.com/dagster-io/dagster/blob/master/MIGRATION.md#migrating-to-10
dagster = "0.15.0"
dagster-gcp = "0.15.0"
dagster-k8s = "0.15.0"
dagster-postgres = "0.15.0"
dagster-slack = "0.15.0"
# TODO this should be updated
data-repo-client = "^1.134.0"
# hca-orchestration depends on dagster-gcp (0.14.0) which depends on google-cloud-bigquery (>=1.19,<3)
# not sure why this is a lower requirement than 0.13 so commenting out and letting dagster-gcp handle it
# NB in version 2.0.0a4 dagster-utils uses google-cloud-bigquery < 3
# google-cloud-bigquery = "^3.27.0"
google-cloud-storage = "^1.3.5"
graphql-ws = "<0.4.0"
grpcio = "1.53.0"
hca-import-validation = "^0.0.17"
mako = "1.2.2"
markupsafe = "2.0.1"
oauthlib = "3.2.2"
pendulum = "2.1.2"
protobuf = "3.20.2"
psycopg2-binary = "2.9.3"
python-dateutil = "^2.8.1"
pyyaml = "^6.0.2"
rfc3339-validator = "^0.1.4"
sentry-sdk = "^1.39.2"
# https://github.com/python-poetry/poetry/issues/6328 - need to explicitly require setuptools
# to get pkg_resources with python 3.10.6 (could also downgrade to python 3.10.5)
setuptools = "^57.5.0"
# To fix a typing issue - pinning typing-extensions to 3.7.4 did not work
referencing = "0.36.2"
# werkzeug = "2.2.3"
# will have to update dagit which means updating broad-dagster-utils - FE-36
aiohttp = "3.9.4"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.5.5"
dagit = "0.15.0"
flake8 = "^3.8.4"
mypy = "^0.812"
pdbpp = "^0.10.2"
pre-commit = "^2.11.0"
pytest = "^7.2.0"
pytest-dotenv = "^0.5.2"
isort = "^5.10.1"

[tool.poetry.scripts]
check = "hca_manage.check:run"
dataset = "hca_manage.dataset:run"
snapshot = "hca_manage.snapshot:run"
soft_delete = "hca_manage.soft_delete:run"
job = "hca_manage.job:fetch_job_info"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
aggressive = 1
exclude = ".pytest_cache,__pycache__"
max_line_length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
